# gauche-pg

./: Makefile.in  README  auto  configure.in  pg-lib.c  pg-lib.h  pg.stub  pg_head.c  pg_tail.c  replace-pg-gauche-string  todo
debian/: changelog  control  control.in  rules
docs/: bug
pg/: README  actions.scm  attribute.scm  base.scm  caching.scm  changelog.wiki  compare.scm  complete.scm  cursor.scm  database.scm  db-stored-class.scm  db.scm  deduce.scm  dependency.scm  fake.scm  hi.scm  keys.scm  links.scm  methods.scm  mt-copy.scm  namespace.scm  oo.scm  persistent.scm  recordset.scm  recreate.scm  relation.scm  result.scm  sql.scm  sync.scm  tempdrop.scm  triggers.scm  types.scm  util.scm  views.scm
pg/buggy/: deduce.scm
pg/hi/: complete.scm
scm/: pg-hi.scm  pg-low.scm  pg.scm  pg2dbm.scm
test/: caching.scm  hi.scm  links.scm  oo.scm  pg-attribute.scm  pg-database.scm  pg-db.scm  pg-hi.scm  pg-keys.scm  pg-low.scm  pg-recordset.scm  pg-sql.scm  pg-types.scm  relation.scm  result.scm  test.scm
